1. code base change to support multiple event 2. issue: https://github.com/starboard-ventures/block-explorer-api-server/issues/1
