# docs/swagger.json
@@ -15,7 +15,7 @@
     "paths": {
         "/deal-proposal-create-event-tracing": {
             "post": {
-                "description": "event manual job api",
+                "description": "deal-proposal-create's event manual job api",
                 "consumes": [
                     "application/json",
                     "application/json"
@@ -51,7 +51,7 @@
         },
         "/deal-proposal-create-event-tracing-cron": {
             "post": {
-                "description": "event cron job api, call by dolphin scheduler",
+                "description": "deal-proposal-create's event cron job api, call by dolphin scheduler",
                 "consumes": [
                     "application/json",
                     "application/json"
@@ -98,6 +98,30 @@
                         "description": "error:...",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/wfil-event-tracing-cron": {
+            "post": {
+                "description": "wfil's event cron job api, call by dolphin scheduler",
+                "consumes": [
+                    "application/json",
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json",
+                    "application/json"
+                ],
+                "tags": [
+                    "Inner|Cron"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
                         }
                     }
                 }
